# MDS-3M

./: .gitignore  README.md  Vessel_Segmentation_KAPOTOS_MARTINI.ipynb  main.py  pyproject.toml  vessel_segmentation_vaisseaux_project.ipynb
