[project]
name = "3m"
version = "0.1.0"
description = "[CentraleSupélec] Modern Mathematical Morphology Project on Retinal Blood Vessel Segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "higra>=0.6.13",
    "imagecodecs>=2025.3.30",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.13.0.92",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
